# Multi-Agent-IT-Ticket-Management-System

./: .gitignore  README.md  gestione_ticket.py  pyproject.toml
agents/: compliance_agent.py  editor_agent.py  retain_agent.py  security_agent.py  technical_agent.py  technical_human.py  technical_team_leader.py
database/: database.py
docs/: SOP_technical_procedures.md  compliance_knowledge.md  security_threat_signatures.md  security_threat_signatures_news.md
knowledge/: knowledge.py
my-copilot-app/: package-lock.json  package.json
my-copilot-app/app/: layout.tsx  page.tsx
my-copilot-app/app/api/copilotkit/: route.ts
optimization/: optimization.py
tools/: tools.py
