[project]
name = "agent-gestioneticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-protocol>=0.1.19",
    "agno[os]>=2.6.5",
    "anthropic>=0.101.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "copilotkit>=0.1.94",
    "ddgs>=9.14.4",
    "firecrawl-py>=4.27.1",
    "google-genai>=2.0.1",
    "groq>=1.2.0",
    "hackernews>=2.0.0",
    "huggingface-hub>=1.14.0",
    "lancedb>=0.30.2",
    "mistralai>=2.4.5",
    "openai>=2.36.0",
    "pgvector>=0.4.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.0",
    "serpapi>=1.0.2",
    "tantivy>=0.26.0",
    "tavily-python>=0.7.24",
]
